--- a/css/unal.css
+++ b/css/unal.css
@@ -1,3 +1,35 @@
+#iframeContainer {
+	flex-grow: 1;
+	overflow-y: auto;
+}
+
+body {
+	overflow: hidden;
+}
+
+html,
+body {
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	height: 100%;
+}
+
+iframe {
+	width: 100vw;
+	height: 100vh;
+	border: none;
+	display: block;
+}
+
+iframe {
+	width: 100%;
+	height: 100%;
+	border: none;
+	overflow-x: none;
+}
+
+
 @font-face {
 	font-family: 'Ancizar sans'; font-weight: bold; font-style: italic; src: url("../fonts/ancizarsans_bold_italic-webfont.eot"), url("../fonts/ancizarsans_bold_italic-webfont.eot?#iefix") format('embedded-opentype'), url("../fonts/ancizarsans_bold_italic-webfont.woff") format('woff'), url("../fonts/ancizarsans_bold_italic-webfont.ttf") format('truetype'), url("../fonts/ancizarsans_bold_italic-webfont.svg#ancizar_sansbold_italic") format('svg');
 }
@@ -31,7 +63,7 @@
 }
 
 body {
-	background-color: #3a3a3a; font-family: "Ancizar sans", Tahoma, Geneva, sans-serif; display: -webkit-box; display: -webkit-flex; display: -moz-flex; display: -ms-flexbox; display: flex; min-height: 100vh; -webkit-box-direction: normal; -webkit-box-orient: vertical; -webkit-flex-direction: column; -moz-flex-direction: column; -ms-flex-direction: column; flex-direction: column; overflow-y: scroll;
+	background-color: #3a3a3a; font-family: "Ancizar sans", Tahoma, Geneva, sans-serif; display: -webkit-box; display: -webkit-flex; display: -moz-flex; display: -ms-flexbox; display: flex; min-height: 100vh; -webkit-box-direction: normal; -webkit-box-orient: vertical; -webkit-flex-direction: column; -moz-flex-direction: column; -ms-flex-direction: column; flex-direction: column; overflow-y: none;
 }
 
 
@@ -443,7 +475,7 @@ ul.dropdown-menu a:focus {
 
 .main_menu .site-url,
 #unalTop .navigation .site-url {
-	background: no-repeat 0 0 url(../images/locDot.png); clear: both; float: left; font-size: 1.72em; height: 17px; line-height: 18px; margin: 12px 10px 10px 250px; padding: 0 0 0 20px;
+	background: no-repeat 0 0 url(../images/locDot.png); clear: both; float: left; font-size: 1.4em; height: 17px; line-height: 18px; margin: 12px 10px 10px 250px; padding: 0 0 0 20px;
 }
 .main_menu .site-url a,
 #unalTop .navigation .site-url a {
@@ -473,7 +505,7 @@ ul.dropdown-menu a:focus {
 }
 
 input#gsc-i-id1.gsc-input{
-	margin-top: -18px!important;
+	margin-top: -3px!important;
 }
 
 .main_menu .buscador .gsc-control-searchbox-only .gsc-input input,
@@ -564,7 +596,7 @@ main.detalle {
 }
 
 footer {
-	height: auto; background: #666; font-size: .9em; color: #ddd; padding: 15px 0 25px 0;
+	height: auto; background: #666; font-size: .9em; color: #ddd; padding: 7px 0 7px 0;
 }
 
 footer div.footer-info p {
@@ -735,7 +767,7 @@ footer .logos a img {
 		height: 22px; width: 22px;
 	}
 	#unalTop .navigation .site-url {
-		margin-left: 200px; font-size: 1.4em;
+		margin-left: 200px; font-size: 1.2em;
 	}
 	#unalTop .navigation .mainMenu {
 		margin-left: 200px;
@@ -819,6 +851,13 @@ footer .logos a img {
 	.col-xxs-12 {
 		width: 100%;
 	}
+		.col-lg-3, .col-lg-4 {
+			display: none;
+		}
+
+		.logos {
+			flex: 0 0 100%;
+		}
 }
 
 @media screen and (max-width:767px) {
@@ -917,6 +956,9 @@ footer .logos a img {
 	footer .logos {
 		margin-top: 10px;
 	}
+	.col-lg-3, .col-lg-4 {
+		display: none;
+	}
 }
 
 @media screen and (min-width:768px) {
@@ -935,5 +977,4 @@ footer .logos a img {
 	#unalTop .firstMenu #profiles ul.dropdown-menu {
 		display: block; border: 0; -webkit-border-radius: none; -moz-border-radius: none; -ms-border-radius: none; -o-border-radius: none; border-radius: none; -webkit-box-shadow: none; -moz-box-shadow: none; -o-box-shadow: none; box-shadow: none; position: relative; background-color: transparent; padding: 0;
 	}
-
 }
