--- a/css/unal.css
+++ b/css/unal.css
@@ -3,6 +3,10 @@
   overflow-y: auto;
 }
 
+.row {
+  line-height: 1.1em !important;
+}
+
 body {
   overflow: hidden;
 }
@@ -414,7 +418,8 @@ ul.dropdown-menu a:focus {
 
 #unalTop .firstMenu {
   background: #666;
-  height: 30px;
+  font-size: 0.8em;
+  height: 32px;
 }
 
 #navbar_content {
@@ -498,7 +503,7 @@ ul.dropdown-menu a:focus {
 
 #unalTop .firstMenu .navbar-default nav li {
   border-right: 1px solid #3d3d3d;
-  height: 30px;
+  height: 32px;
   padding-top: 6px;
   -webkit-transition: background 0.5s;
   -moz-transition: background 0.5s;
@@ -774,7 +779,7 @@ ul.dropdown-menu a:focus {
   position: absolute;
   right: 85px;
   top: 36px;
-  height: 30px;
+  height: 32px;
 }
 
 .main_menu .buscador .gscb_a,
@@ -837,7 +842,7 @@ input#gsc-i-id1.gsc-input {
 
 .main_menu .buscador .gsc-control-searchbox-only .gsc-search-box,
 #unalTop .navigation .buscador .gsc-control-searchbox-only .gsc-search-box {
-  height: 30px;
+  height: 32px;
   margin: 0;
   position: relative;
 }
@@ -865,7 +870,7 @@ input#gsc-i-id1.gsc-input {
   box-shadow: none;
   cursor: pointer;
   float: right;
-  height: 30px;
+  height: 32px;
   padding: 0;
   width: 30px;
   margin-left: 0 !important;
@@ -881,7 +886,7 @@ input#gsc-i-id1.gsc-input {
   margin: 0;
   outline: 0;
   padding: 0;
-  height: 30px;
+  height: 32px;
   width: 30px;
 }
 
